# mcp-demo

./: .env  README.md  chatbot.py  client.py  client_http.py  client_remote.py  client_sse.py  pyproject.toml  qwen.py  server.py
